--- a/index.html
+++ b/index.html
@@ -64,6 +64,30 @@
                     <h2 class="naz">Работа 6</h2>
                 </div>
             </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/7.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 7</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/8.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 8</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/9.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 9</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/01.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 10</h2>
+                </div>
+            </div>
             <div class="help_img">
                 <p class="help_text">Для увиличения картинки кликните по ней!)</p>
             </div>
