--- a/index.html
+++ b/index.html
@@ -88,6 +88,42 @@
                     <h2 class="naz">Работа 10</h2>
                 </div>
             </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/02.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 11</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/04.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 12</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/05.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 13</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/06.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 14</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/07.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 15</h2>
+                </div>
+            </div>
+            <div class="article ">
+                <div class="content image__wrapper">
+                    <img src="img/08.jpg " class="minimized" alt="#">
+                    <h2 class="naz">Работа 16</h2>
+                </div>
+            </div>
             <div class="help_img">
                 <p class="help_text">Для увиличения картинки кликните по ней!)</p>
             </div>
